--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -68,3 +68,4 @@ plugins:
       - path: "Mirror.unitypackage"
         label: "Mirror Unity Package"
         name: "Mirror-${nextRelease.version}.unitypackage"
+      - branches: "master, UnityPack2"
